# fibonacci-sphere

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md
.cargo/: config.toml
.cursor/skills/windows-rust-godot-build/: SKILL.md
.cursor/skills/windows-rust-godot-build/scripts/: _cargo_win.sh  build-gdextension.sh  build-lib.sh  test.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  rust.yml
docs/: architecture.md  description.md  godot.md
examples/sphere_lattice_visualizer/: Cargo.toml
examples/sphere_lattice_visualizer/src/: camera.rs  controls.rs  gizmos.rs  hud.rs  lattice.rs  main.rs  plugin.rs  settings.rs
extensions/fibonacci_sphere_gd/: Cargo.toml
extensions/fibonacci_sphere_gd/src/: lib.rs
godot/: fibonacci_sphere.gdextension  fibonacci_sphere.gdextension.uid  project.godot
godot/demo/: main.gd  main.gd.uid  main.tscn  orbit_camera.gd  orbit_camera.gd.uid
packaging/godot-addon/: README.md  fibonacci_sphere.gdextension
scripts/: README.md
scripts/linux/: ci-check.sh  package-godot-release.sh  setup-bevy-deps.sh  setup-branch-protection.sh  setup-git-hooks.sh  sync-version.sh
scripts/windows/: ci-check.cmd  ci-check.ps1  setup-branch-protection.cmd  setup-branch-protection.ps1  setup-git-hooks.cmd  setup-git-hooks.ps1  version-lib.ps1
src/: error.rs  geography.rs  lattice.rs  lib.rs  neighbors.rs  point.rs  test_helpers.rs  validation.rs
src/methods/: canonical.rs  distribution.rs  epsilon.rs  info.rs  latlong.rs  mod.rs  offset.rs
src/render/: mod.rs  ribbon.rs  terrain_mesh.rs
src/terrain/: areas.rs  borders.rs  generator.rs  mod.rs  polygons.rs  reassign.rs  rng.rs  types.rs
src/terrain/assign/: mod.rs  perlin.rs  polar_flood.rs
src/topology/: delaunay2d.rs  mod.rs  pathfinding.rs  spherical.rs  voronoi.rs  voronoi_mesh.rs
tests/: integration.rs
tests/common/: mod.rs
