[package]
name = "sphere_lattice_visualizer"
version.workspace = true
edition = "2024"
publish = false
description = "Interactive visualizer for fibonacci_sphere lattice distributions (Bevy)"
license.workspace = true

[dependencies]
bevy = { version = "0.16", default-features = true, features = ["bevy_ui"] }
dejavu = "2.37.0"
fibonacci_sphere = { path = "../.." }
rand = "0.8"
