[package]
name = "fibonacci_sphere_gd"
version.workspace = true
edition = "2024"
publish = false
description = "Godot 4 GDExtension bindings for fibonacci_sphere"
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
fibonacci_sphere = { path = "../.." }
godot = { version = "0.5.4", features = ["register-docs"] }
